deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: virtual-labs
  namespace: default
spec:
  selector:
    matchLabels:
      app: virtual-labs
  replicas: 1
  template:
    metadata:
      labels:
        app: virtual-labs
    spec:
      containers:
        - name: virtual-labs
          image: jorvelazquez3/gameserver:vlabs
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: virtual-labs
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 8090
      targetPort: 8090
      name:  grpc
    - port: 8080
      targetPort: 8080
      name:  grpc-gateway
  selector:
    app: virtual-labs
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: virtual-labs-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/protocol: h2c  # For GRPC
spec:
  rules:
    #     - host: myk3s.olakeace.com
    - http:
        paths:
          - path: /v1/vlabs/
            pathType: Prefix
            backend:
              service:
                name: virtual-labs
                port:
                  number: 8080
#  tls:
#    - hosts:
#        - myk3s.olakeace.com
#      secretName: myk3s-olakeace-com-tls
